<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/settings_layout_padding">

    <TextView
        android:id="@+id/settingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/settings_text_size"
        android:textStyle="italic"/>


    <TextView
        android:id="@+id/sizeSettingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sizes_settings_text"
        android:textSize="@dimen/sizes_settings_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="3"
            android:text="@string/radius_setting_text"
            android:inputType="number"
            android:layout_marginEnd="@dimen/change_radius_text_size" />

        <SeekBar
            android:id="@+id/radiusSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:progress="100"
            android:paddingTop="@dimen/settings_layout_padding"/>

    </LinearLayout>

    <TextView
        android:id="@+id/colorSettingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colors_setting_text"
        android:textStyle="italic"
        android:textSize="@dimen/sizes_settings_text_size"
        android:layout_marginTop="@dimen/settings_layout_margin"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <CheckBox
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_bgcolor_text" />

        <CheckBox
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_hcolor_text" />

        <CheckBox
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_mcolor_text" />

        <CheckBox
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_scolor_text" />

        <CheckBox
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_ncolor_text" />

        <CheckBox
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_marker_hcolor_text" />

        <CheckBox
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_marker_mcolor_text" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/button_bgcolor_default"
            android:text="" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/settings_layout_margin"
            android:text="@string/choose_color_button"
            android:textSize="@dimen/change_button_text_size"/>

    </LinearLayout>



</LinearLayout>